[gd_scene load_steps=7 format=2]

[ext_resource path="res://picross/board.gd" type="Script" id=1]
[ext_resource path="res://picross/board_grid.gd" type="Script" id=2]
[ext_resource path="res://ui/write.png" type="Texture" id=3]
[ext_resource path="res://picross/board_cells.gd" type="Script" id=4]
[ext_resource path="res://picross/picross.gd" type="Script" id=5]
[ext_resource path="res://ui/cross.png" type="Texture" id=6]

[node name="Node" type="Node"]

[node name="Picross" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Picross"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Picross/VBoxContainer"]
margin_right = 720.0
margin_bottom = 718.0
size_flags_vertical = 3
stretch_mode = 1

[node name="Container" type="Panel" parent="Picross/VBoxContainer/AspectRatioContainer"]
margin_left = 1.0
margin_right = 719.0
margin_bottom = 718.0

[node name="GridContainer" type="GridContainer" parent="Picross/VBoxContainer/AspectRatioContainer/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2

[node name="HintMargins" type="MarginContainer" parent="Picross/VBoxContainer/AspectRatioContainer/Container/GridContainer"]
unique_name_in_owner = true

[node name="HorizontalHints" type="HBoxContainer" parent="Picross/VBoxContainer/AspectRatioContainer/Container/GridContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 718.0
size_flags_horizontal = 3

[node name="VerticalHints" type="VBoxContainer" parent="Picross/VBoxContainer/AspectRatioContainer/Container/GridContainer"]
unique_name_in_owner = true
margin_top = 4.0
margin_bottom = 718.0
size_flags_vertical = 3

[node name="Board" type="Control" parent="Picross/VBoxContainer/AspectRatioContainer/Container/GridContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 4.0
margin_right = 718.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Cells" type="Control" parent="Picross/VBoxContainer/AspectRatioContainer/Container/GridContainer/Board"]
script = ExtResource( 4 )

[node name="Grid" type="Control" parent="Picross/VBoxContainer/AspectRatioContainer/Container/GridContainer/Board"]
script = ExtResource( 2 )
line_width = 2
strong_line_width = 4

[node name="PanelContainer" type="PanelContainer" parent="Picross/VBoxContainer"]
margin_top = 722.0
margin_right = 720.0
margin_bottom = 1440.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Picross/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 713.0
margin_bottom = 711.0

[node name="VBoxContainer" type="VBoxContainer" parent="Picross/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 351.0
margin_bottom = 704.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Picross/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 355.0
margin_right = 706.0
margin_bottom = 704.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Picross/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
margin_right = 351.0
margin_bottom = 704.0
size_flags_vertical = 7

[node name="Write" type="Button" parent="Picross/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 173.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 5
toggle_mode = true
icon = ExtResource( 3 )
expand_icon = true

[node name="Erase" type="Button" parent="Picross/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 177.0
margin_right = 351.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 5
toggle_mode = true
icon = ExtResource( 6 )
expand_icon = true
